# OnboardingService

./: .gitignore  Dockerfile  ReadMe.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1761593183_create_bootstrap_keys_table.py
app/: log_conf.yaml  main.py
app/api/: deps.py  root_path.py
app/api/private/v1/: bootstrap_keys.py  device_management.py  private_router.py
app/api/public/v1/: public_router.py  registration.py
app/core/: aws_iot_client.py  security.py  settings.py
app/core/crud/: bootstrap_keys.py
app/core/db/: database.py  models.py  models_list.py
app/core/schemas/: schemas.py
tests/: async_db_utils.py  conftest.py  test_main_route.http  test_private_route.http
tests/api/: test_api_bootstrap_keys.py  test_api_registration_endpoint.py
tests/crud/: test_crud_bootstrap_keys.py
